fix : sonar issue